tests/type-reconstruction/ill-typed/exceptions/exceptions-3.stella
language core;

extend with #exceptions, #exception-type-declaration, #type-reconstruction;

exception type = auto

fn fail(n : Nat) -> Bool {
  return throw(succ(0))
}

fn main(n : Nat) -> Bool {
  return try { fail(n) } with { succ(0) }
}
